--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack & node server.js"
+    "test": "webpack & node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
